# agent_collab

./: .gitignore  README.md  config.toml  log.md  pyproject.toml
docs/: SESSION_SUMMARY.md
docs/plans/: 2026-02-05-agent-collab-design.md  comments.md  log.md
prompts/: 01_refine_goal.md  02_write_plan.md  03_review_plan.md  04_respond_comments.md  05_execute_step.md  06_recover_context.md
src/agent_collab/: config.py  main.py
src/agent_collab/adapters/: __init__.py  base.py  claude.py  codex.py  factory.py
src/agent_collab/engine/: __init__.py  prompt_loader.py  state_machine.py  workflow.py
src/agent_collab/persistence/: __init__.py  state.py
src/agent_collab/tui/: __init__.py  app.py
tests/: test_adapters.py  test_config.py  test_init.py  test_persistence.py  test_prompt_loader.py  test_state_machine.py  test_tui.py  test_workflow.py
