[project]
name = "agent-collab"
version = "0.1.0"
description = "Dual-agent collaboration workflow automation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "watchfiles>=0.21.0",
    "tomli>=2.0.0",
]

[project.scripts]
agent-collab = "agent_collab.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_collab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
